create github pages

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="#top">
+                    <a href="index.html#footer1-c">
                         <img src="assets/images/favicon.paulorfernandes-122x122.png" alt="Desenvolvedor web desde 2007" title="Desenvolvedor web desde 2007" style="height: 5.5rem;">
                     </a>
                 </span>
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/a">best free site builder</a></section><section class="header9 cid-qF6gHWsjIL mbr-fullscreen mbr-parallax-background" id="header9-e">
+<section class="engine"><a href="https://mobirise.ws/p">open source web page maker</a></section><section class="header9 cid-qF6gHWsjIL mbr-fullscreen mbr-parallax-background" id="header9-e">
 
     
 
@@ -245,7 +245,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Em instantes você receberá nossa oferta!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="g6EO+ilQDCVOrtm96GncGANNdwrBKkwIAn02GpXXBLItrla2r0V2+O1JNrA5RiRqm3qdJ4eCWtx1f0p3gwpbUMeN2HvJyUVVsN/QhrQn/LWrlTJXJeEc8omex89wjLAZ" data-form-field="Email">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="l+Vb+zgjqflP+fWO+Gc46WebLnjRQFU8C6e7Fzj2AHUSThyKp8iHn+kdmRURohkpgywnSmrV5W9LrzHEZmK/evj8hXuHo4OxhtnZlZc4VQC3w4x6w0IjDjdXAWGVWR5p" data-form-field="Email">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Seu melhor email" data-form-field="Email" required="" id="email-form3-i">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Eu quero!</button></span>
@@ -356,7 +356,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">OBRIGADO! JÁ RECEBI SUA MENSAGEM E EM INSTANTES RESPONDEREI.</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mm2LBvWefbGer9JKDOYyhtmHP4V994ggrumIaCoSSHirps2baImDxy4J8y2lOyhhesBs7tGgYuVhvFkah8Ng/uafqah0M5VvTz1s8y7wgvs8KnTVz/e7mGFbaM3A9xwD" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="28dpptffU1wDYsCGkxQiaDEvZHHNb9HwbcDNKWaHzOWd/i3LZoJrVvd7Mrvlqx064qtv+lD+hbnbiPjZtNQTV8q9kZHjc4koQrrlWO6hO0cEh5WkW5cFq1rrduZumZB3" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
