--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="header3 cid-s0hNEG1d92 mbr-parallax-background" id="header3-2">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="header3 cid-s0hNEG1d92 mbr-parallax-background" id="header3-2">
 
     
 
@@ -107,8 +107,7 @@
         <div class="container mb-5">
             <div class="media-container-row">
                 <div class="col-12 align-center">
-                    <h2 class="mbr-section-title pb-3 mbr-fonts-style display-2">
-                        Alguns de nossos clientes</h2>
+                    <h2 class="mbr-section-title pb-3 mbr-fonts-style display-2">✓Alguns clientes</h2>
                     
                 </div>
             </div>
@@ -219,8 +218,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="title col-12 col-lg-8">
-                <h2 class="align-center pb-2 mbr-fonts-style display-2">
-                    DOMÍNIO ➕ HOSPEDAGEM`<strong>GRÁTIS</strong></h2>
+                <h2 class="align-center pb-2 mbr-fonts-style display-2"><strong>
+                    DOMÍNIO</strong> ➕ <strong>HOSPEDAGEM</strong>`<strong>GRÁTIS</strong></h2>
                 <h3 class="mbr-section-subtitle align-center pb-5 mbr-light mbr-fonts-style display-7">
                     Investindo em um site, ou loja virtual no primeiro ano a hospedagem e o seu domínio é grátis</h3>
             </div>
@@ -229,7 +228,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0u5OWpAhRg8COsXZRkDucel/jjYh7kVBRuC2qFYBhOieTM8+UygLw/f9CHg6rGRnS5syoJ1/3KVlJkdTALN5g7qQzAYcnNKuXQolqNTXejv9seNCHg3px4tNRdffV8zf">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WHr4WGUC9veOFoHzqSCvFanhAscRkj4wOTvscSvI+2rdxCth3eUCWH3MJkYiGm+YSDrjWy1MpjIo3yE/jKzQ3EaOI4mejQBu4SlAn20eoaPKB+v56LyqgjLez1PvBJ6o">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Opa! Já recebemos seu e-mail aguarde informações de nossas promoções!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -347,7 +346,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Pb8dDLHcQqbU6tJgGBnjPMPDy1NPi5/j/+tAGG0mjcTW1YruoMjh0xgvg959J1LglexZwQDLefFLb2fO2dtOWjM4nnsw1A7DilxYjeanrtU0lXvwM7ji2E+cLG8Zm7/j">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wdSfQPOTrMWBmSh+w/PbBaCPqzK/CMvlcSorYRUVt5uU1hA581xDtuelMFV525zC0KPnqlzi/YS75hLvcIVjJCGwY5mHFP7Vx8/3b9AedvS1zQ7Bvcq0HA8SLK3GG8IH">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Opa! Já recebemos sua mensagem, e em muito breve responderemos.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
