create github pages

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     
 
-    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
+    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm bg-color transparent">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
                 <span></span>
@@ -72,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy site maker</a></section><section class="header3 cid-s0hNEG1d92 mbr-parallax-background" id="header3-2">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="header3 cid-s0hNEG1d92 mbr-parallax-background" id="header3-2">
 
     
 
@@ -227,7 +227,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="y1G3f2xnvgxs6CvXzX4cQBuSPDRPuwasrFqMP0vuVdZSMy+22Lt4JilwxZuhQ1d/Sv7uYGOHeWjMyNKxdwN/2I64KamHZ1v/Rj99U/GJzi1K/5o/eKnSECzt8qbHPIF3">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7BGY0DOZowpQLUKqihyovxyMXfirn2q+td3i8XaXlQYMc31RwAvheILW0ZKnA0UfOcxSLTn+r4sxXEr3V254O7kV2o5hXyEZZ0Zwz3R5a7SRWst8JlPigHDORjlj+/Sq">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Opa! Já recebemos seu e-mail aguarde informações de nossas promoções!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -345,7 +345,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="iAOnj1c/7SfpW6AbyRnG4FbN7mCyzHB5nS70ySoKo1GGFMrhqIj7wAXGm7ePT5pYQayv3SGW36ZxZ/9Njl9eNd/IEtMGuUZ2IySfqC1D2wZvjnMw4Vzx/U6K1PC6VTNb">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KKW72BaVYavBut12yF/hkePxJ8ASIr5BaI5V4pxORF+TodVLwf2lOM26nJKhKuIzeVUO+uT1OXKzlY0baBAk1zJ3aWWy9mfQGOF3d8trfFCeYBeMwZlC0wLmBB+Qz+JF">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Opa! Já recebemos sua mensagem, e em muito breve responderemos.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
