create github pages

--- a/sitesesistemas.html
+++ b/sitesesistemas.html
@@ -11,13 +11,14 @@
   
   
   <title>Sites e Sistemas - Empreendedores de todos os seguimentos</title>
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -47,7 +48,7 @@
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-5" href="#top">
-                        Paulo Fernandes</a></span>
+                        Paulo R.Fernandes</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -70,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header3 cid-s1ehD9fOu4" id="header3-q">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own website</a></section><section class="header3 cid-s1ehD9fOu4" id="header3-q">
 
     
 
@@ -79,7 +80,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 75%;">
-                <a href="sitesesistemas.html#features7-s"><img src="assets/images/img-463328-856x659.png" alt="Sistes e sistemas - Paulo Roberto Fernandes" title="Sistes e sistemas - Paulo Roberto Fernandes"></a>
+                <a href="sitesesistemas.html#features7-s"><img src="assets/images/img-463329-856x659.png" alt="Sistes e sistemas - Paulo Roberto Fernandes" title="Sistes e sistemas - Paulo Roberto Fernandes"></a>
             </div>
 
             <div class="media-content">
@@ -104,7 +105,7 @@
     <div class="container">
         <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 10%;">
-            <div class="section-text align-center mbr-fonts-style display-7"><strong>Nenhum empreendedor,(a) deve considerar fazer um site de forma rápidinha</strong> ou usar templates prontos para sua marca estar na internet de forma vulnerável. Todo &nbsp;<strong>projeto deve ser bem pensado</strong>, desde <strong>a melhor linguagem a ser usada</strong> na criação do site até mesmo cores, servidores e muito mais detalhes,&nbsp;<br><br>Desenvolvemos sites pensando<strong> na necessidade de seu público alvo, e clientes</strong>, imaginamos que esta experi~encia para para eles <strong>tem de ser a melhor possível</strong> caso contrário seu cliente pode ir para outro site em um clique.<br><br><a href="sitesesistemas.html#features7-s">Veja nosso cronograma para criar seu site...&nbsp;</a></div>
+            <div class="section-text align-center mbr-fonts-style display-7"><strong>Nenhum empreendedor,(a) deve considerar fazer um site de forma rápidinha</strong> ou usar templates prontos para sua marca estar na internet de forma vulnerável. Todo &nbsp;<strong>projeto deve ser bem pensado</strong>, desde <strong>a melhor linguagem a ser usada</strong> na criação do site até mesmo cores, servidores e muito mais detalhes,&nbsp;<br><br>Desenvolvemos sites pensando<strong> na necessidade de seu público alvo, e clientes</strong>, imaginamos que esta experiência para para eles <strong>tem de ser a melhor possível</strong> caso contrário seu cliente pode ir para outro site em um clique.<br><br><a href="sitesesistemas.html#features7-s">Passo a passo&nbsp;</a><a href="sitesesistemas.html#features7-s">✚</a></div>
             <hr class="line" style="width: 10%;">
         </div>
         </div>
@@ -122,7 +123,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="media">
                     <div class="card-img pr-2">
-                        <span class="mbr-iconfont mbri-edit" style="color: rgb(255, 204, 0); fill: rgb(255, 204, 0);"></span>
+                        <span class="mbr-iconfont mbri-edit" style="color: rgb(255, 204, 0); fill: rgb(255, 204, 0); font-size: 45px;"></span>
                     </div>
                     <div class="card-box media-body">
                         <h4 class="card-title py-3 mbr-fonts-style display-7"><strong>Pesquisa de Mercado</strong></h4>
@@ -134,7 +135,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="media"> 
                     <div class="card-img pr-2">
-                        <span class="mbr-iconfont mbri-touch" style="color: rgb(255, 204, 0); fill: rgb(255, 204, 0);"></span>
+                        <span class="mbr-iconfont mbrib-responsive" style="color: rgb(255, 204, 0); fill: rgb(255, 204, 0); font-size: 45px;"></span>
                     </div>
                     <div class="card-box media-body">
                         <h4 class="card-title py-3 mbr-fonts-style display-7"><strong>
@@ -148,7 +149,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="media">
                     <div class="card-img pr-2">
-                        <span class="mbr-iconfont mbri-responsive" style="color: rgb(255, 204, 0); fill: rgb(255, 204, 0);"></span>
+                        <span class="mbr-iconfont mbrib-growing-chart" style="color: rgb(255, 204, 0); fill: rgb(255, 204, 0); font-size: 45px;"></span>
                     </div>
                     <div class="media-body card-box">
                         <h4 class="card-title py-3 mbr-fonts-style display-7"><strong>
@@ -185,15 +186,15 @@
 </section>
 
 
-  <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
+  <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
