create github pages

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="header3 cid-s0hNEG1d92 mbr-parallax-background" id="header3-2">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="header3 cid-s0hNEG1d92 mbr-parallax-background" id="header3-2">
 
     
 
@@ -230,7 +230,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Ga6Z01ZOQ3uvJDU7ZOv8UaA4ihHKNyvoXZCGQquN8m2+c9FmYy7MNXQsEFeUcvgKgmJWtQ04OOqeDy2Vdqb4hdFtidq/h5bW019GLWKe0npTpsGanR+DtavJi6Qhn+p3">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vmfnfUcxAboZt4yeCcUwj8rMyl8rVTcryctIRx81QfDNgtXFMBrilZCrmVjUTjn5ocXo9X405DpOsyP/DgRrhJwyVcecRwijAiI1rx4CAd5qzlGcKrtyoVJ6GRjOCODL">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Opa! Já recebemos seu e-mail aguarde informações de nossas promoções!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -265,8 +265,7 @@
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
                         Web Sites &amp; Sistemas</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                        Sites e sistema de administração e gerenciamento, com páginas <strong>adaptáveis a qualquer dispositivo</strong>, com aplicações específicas para cada modelo de negócio ou necessidade. Sites otimizados, SEO. <br>
-                    <a href="sitesesistemas.html#header3-q">✚ saíba mais</a><br><br></p>
+                        Sites e sistema de administração e gerenciamento, com páginas <strong>adaptáveis a qualquer dispositivo</strong>, com aplicações específicas para cada modelo de negócio ou necessidade. Sites otimizados, SEO. <br><br><br></p>
                 </div>
             </div>
 
@@ -348,7 +347,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="cyV4UNz5cOGFk3txneVnA286dgvtTc8FSLG9y3YJWqIB10TmsPMLsZiucKirA6MHBgzTEpk0VAWmQRDR2cUSTslBIaoSWEeEI4P1uf4ChtQ1tE1vg80Y/b0cUWzZDpBJ">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yAxlCmsB7ub88QWNPTXmox1ygP8lNImLnc92o+ptitDmcmj1l+X5XgHpIeZUvYZ6qTN/+DWXx7JBpJRO5g0JgFCic2nZx59DrLCUPx/iqV7ReOlXsO53jJU2liaE2dVE">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Opa! Já recebemos sua mensagem, e em muito breve responderemos.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
